Fix animation bug on Safari

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -501,7 +501,6 @@ body.homepage #mobilescrollwrapper #validationerrors {
 #homeinvoicewrapper {
 	position:relative;
 	overflow:hidden;
-	transition: all .6s;
 }
 
 #homesuccesswrapper {
